# fix scrollbar width

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -490,7 +490,7 @@ body {
 
 /* width */
 ::-webkit-scrollbar {
-    width: 15px;
+    width: 10px;
 }
 
 /* Track */
